tests/ui/diagnostic_namespace/feature-gate-diagnostic_namespace.stderr
error[E0658]: `#[diagnostic]` attribute name space is experimental
  --> $DIR/feature-gate-diagnostic_namespace.rs:1:3
   |
LL | #[diagnostic::non_existing_attribute]
   |   ^^^^^^^^^^
   |
   = note: see issue #111996 <https://github.com/rust-lang/rust/issues/111996> for more information
   = help: add `#![feature(diagnostic_namespace)]` to the crate attributes to enable

error[E0658]: `#[diagnostic]` attribute name space is experimental
  --> $DIR/feature-gate-diagnostic_namespace.rs:7:3
   |
LL | #[diagnostic::non_existing_attribute(with_option = "foo")]
   |   ^^^^^^^^^^
   |
   = note: see issue #111996 <https://github.com/rust-lang/rust/issues/111996> for more information
   = help: add `#![feature(diagnostic_namespace)]` to the crate attributes to enable

warning: unknown diagnostic attribute
  --> $DIR/feature-gate-diagnostic_namespace.rs:1:15
   |
LL | #[diagnostic::non_existing_attribute]
   |               ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unknown_or_malformed_diagnostic_attributes)]` on by default

warning: unknown diagnostic attribute
  --> $DIR/feature-gate-diagnostic_namespace.rs:7:15
   |
LL | #[diagnostic::non_existing_attribute(with_option = "foo")]
   |               ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0658`.
